[package]
name = "debot-utils"
version = "0.1.2"
authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
edition = "2021"
description = "Utility functions for dex trading"
documentation = "https://docs.rs/debot-utils/"
homepage = "https://crates.io/crates/debot-utils"
repository = "https://github.com/shigeo-nakamura/debot-utils"
license = "MIT"

[dependencies]
chrono = "0.4.24"
