[package]
name = "debot-utils"
version = "1.0.2"
authors = ["Shigeo NAKAMURA <nakamura_shigeo@yahoo.com>"]
edition = "2021"
description = "Utility functions for dex trading"
documentation = "https://docs.rs/debot-utils/"
homepage = "https://crates.io/crates/debot-utils"
repository = "https://github.com/shigeo-nakamura/debot-utils"
license = "MIT"

[dependencies]
chrono = "0.4.24"
rusoto_core = "0.48.0"
rusoto_kms = "0.48.0"
openssl = "0.10.54"
base64 = "0.13.0"
